# gr-cessb

./: CMakeLists.txt  MANIFEST.md  README
apps/: CMakeLists.txt  ssb.grc
cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  cessbConfig.cmake
docs/: CMakeLists.txt  README.cessb
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  cessb_clipper_cc.block.yml  cessb_clipper_cc.xml  cessb_stretcher_cc.block.yml  cessb_stretcher_cc.xml
include/cessb/: CMakeLists.txt  api.h  clipper_cc.h  stretcher_cc.h
lib/: CMakeLists.txt  clipper_cc_impl.cc  clipper_cc_impl.h  qa_cessb.cc  qa_cessb.h  qa_clipper_cc.cc  qa_stretcher_cc.cc  stretcher_cc_impl.h  test_cessb.cc
python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  qa_clipper_cc.py  qa_stretcher_cc.py
python/bindings/: CMakeLists.txt  clipper_cc_python.cc  python_bindings.cc  stretcher_cc_python.cc
python/bindings/docstrings/: clipper_cc_pydoc_template.h  stretcher_cc_pydoc_template.h
swig/: CMakeLists.txt  cessb_swig.i
